# litellm-rs

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REFACTOR.md  CHANGELOG.md  CLAUDE.md  CLEANUP_DEMO.md  Cargo.toml  FEATURE_COMPARISON.md  LICENSE  LICENSE-LITELLM  Makefile  PLAN_TEST_REFACTORING.md  PLAN_THINKING_SUPPORT.md  README.md  REFACTOR_DEMO.md  RUST_ERROR_DESIGN.md  VERTEX_AI_REFACTOR_STATUS.md  build.rs  codecov.yml  groq_verification.md  libcache_manager_tests.rlib  setup-dev.sh  start.sh  test_completion.rs  test_openrouter.sh
.cargo/: audit.toml
.github/workflows/: ci-no-codecov.yml  ci.yml  docker.yml  release.yml
benches/: performance_benchmarks.rs
config/: gateway.yaml.example  model_prices_extended.json  pricing.yaml
deployment/: README.md
deployment/docker/: .dockerignore  Dockerfile  Dockerfile.arm  README.md  build.sh  docker-compose.dev.yml  docker-compose.yml
deployment/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  (+3 more)
docs/: IMPROVEMENT_ANALYSIS.md  README.md  ROUTER_REFACTOR_PLAN.md  UNIFIED_ROUTER_PLAN.md
examples/: .env.example  .env.google  Cargo.toml  README.md  azure_ai_chat.rs  azure_ai_completion.rs  azure_ai_streaming.rs  deepseek_completion.rs  groq_dispatch_test.rs  groq_example.rs  groq_streaming_test.rs  openrouter_completion.rs  test_cloudflare.rs  test_thinking.rs  test_thinking_raw.rs  test_transformer.rs  test_xai.rs
examples/providers/: README.md
scripts/: clean_backup_files.sh  find_backup_files.sh
src/: ARCHITECTURE_ENHANCEMENT.md  lib.rs  main.rs
tests/: lib.rs  test_connection_pool.rs
(+865 files in other folders)
